# nebula-haskell

./: CHANGELOG.md  config.json  my-project.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: Cursor.hs  Entity.hs  NGraph.hs  NTypes.hs  Parser.hs  Query.hs  Server.hs  Test.hs
