cabal-version:      2.4
name:               my-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable my-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:	Cursor, NGraph

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: DeriveGeneric, DeriveAnyClass, DerivingStrategies 
    build-depends:    base ^>=4.12.0.0, 
                      Z-IO == 1.0.*, 
                      Z-Data == 1.0.*, 
                      process == 1.6.5.0,
                      http-server >= 0.2 && < 2 
    hs-source-dirs:   app, lib
    default-language: Haskell2010
    ghc-options: -Wall -O2
